Remover os arquivos de teste